--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
+        "lint-fix": "eslint . --fix",
         "test": "vitest",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
@@ -29,7 +30,6 @@
         "@eslint/js": "^9.30.1",
         "@storybook/addon-a11y": "^9.0.17",
         "@storybook/addon-docs": "^9.0.17",
-        "@storybook/addon-vitest": "^9.0.17",
         "@storybook/react-vite": "^9.0.17",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.3.0",
@@ -37,8 +37,6 @@
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
-        "@vitest/browser": "3.2.4",
-        "@vitest/coverage-v8": "3.2.4",
         "eslint": "^9.30.1",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.5.1",
@@ -48,7 +46,6 @@
         "global-jsdom": "^26.0.0",
         "globals": "^16.3.0",
         "jsdom": "^26.1.0",
-        "playwright": "^1.54.1",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "storybook": "^9.0.17",
