--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@eslint/js": "^9.30.1",
         "@storybook/addon-a11y": "^9.0.17",
         "@storybook/addon-docs": "^9.0.17",
+        "@storybook/addon-themes": "^9.0.17",
         "@storybook/react-vite": "^9.0.17",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.3.0",
