--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
     },
     "dependencies": {
         "@gsap/react": "^2.1.2",
-        "@hookform/resolvers": "^5.1.1",
         "@tailwindcss/vite": "^4.1.11",
         "gsap": "^3.13.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-hook-form": "^7.60.0",
         "react-router": "^7.6.3",
-        "tailwindcss": "^4.1.11",
-        "zod": "^4.0.5"
+        "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^4.0.1",
